--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">HOME</a></li>
-                <li><a href="shop.html">shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">contact</a></li>
