--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<?php
+$servername = "mysql.us.cloudlogin.co";
+$username = "trymore_max";
+$password = "159357";
+$dbname = "trymore_max";
+
+$conn = new mysqli($servername, $username, $password, $dbname);
+
+// Check connection
+if ($conn->connect_error) {
+  die("Connection failed: " . $conn->connect_error);
+}
+echo "Connected successfully";
+?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
